# WaterRendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.h  clock.h  framebuffer.h  model.h  ocean.h  shader.h  texture.h  wave_utils.h
src/: camera.cpp  framebuffer.cpp  main.cpp  model.cpp  ocean.cpp  texture.cpp  wave_utils.cpp
